2000-08-04  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc.el (mhc-setup): Fix, called mhc-icon-setup() twice.

2000-08-04  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc-schedule.el (mhc-schedule-subject): Don't decode
	encoded word.
	(mhc-schedule-location): Ditto.

	* emacs/mhc-parse.el (mhc-parse/subject): Decode encoded word.
	(mhc-parse/location): Ditto.
	(mhc-parse/category): Ditto.

2000-08-04  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc.el (mhc-mode-menu-spec): Add mhc-file-toggle-offline() and

	* emacs/mhc-file.el (mhc-file-sync): Rescan this month after
	mhc-file/sync().

	* emacs/mhc-sync.el (mhc-sync/start-process): Wait process running
	like call-process.
	Window configuration save & restore.

2000-08-04  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc-bm.el (mhc-bm-icon-alist): Fixed typo (xpm->xbm).
	(mhc-use-icon-p): Return nil if mhc-icon-path is nil.

	* emacs/mhc-mime.el (mhc-mime/draft-reedit): Delete header separator
	if already exists.
	Assume text/plain if there is no 'Content-Type' header.
	(mhc-mime-draft-translate): Go to `point-min' before searching
	header separator.

2000-08-03  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-mew.el (mhc-mew-draft-translate):
	Execute mew-header-encode-region() safer.

	* emacs/mhc.el (mhc-edit): Ensure reedit when imported buffer is schedule.
	
2000-08-03  Yoshinari NOMURA  <nom@quickhack.net>

	* ruby-ext/lib/mhc-gtk.rb.in (toplevel):
	if Win32 plathome, override MhcKconv::todisp using Uconv::euctou8
        (Thanks to Mr. WATANABE Hirofumi)
	
	* ruby-ext/lib/mhc-palm.rb (toplevel): rescue LoadError of mhc_pilib.
        (Thanks to Mr. WATANABE Hirofumi)

2000-08-02  Yoshinari Nomura  <nom@quickhack.net>

	* emacs/mhc-db.el (mhc-db/eval-for-duration):
	fix estimation of week-of-month.

2000-08-02  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc-cmail.el (toplevel): Set draft related backends for SEMI.
